--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "570c1656de1542f59015a99717221254",
+       "model_id": "5e61178917664a13aebdbea1bd481303",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,9 +22,8 @@
    ],
    "source": [
     "#nbi:hide_in\n",
-    "%matplotlib inline\n",
     "from ipywidgets import interactive\n",
-    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "def f(m, b):\n",
@@ -42,20 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee7c48b9289e4bda8446ee8133b48c43",
+       "model_id": "5ebcabbfe9a8438ab3ae35c653756a91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,12 +68,8 @@
    ],
    "source": [
     "#nbi:hide_in\n",
-    "import ipywidgets as widgets\n",
     "from ipywidgets import HBox, VBox\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
-    "%matplotlib inline\n",
     "@widgets.interact_manual(\n",
     "    color=['blue', 'red', 'green'], lw=(1., 10.))\n",
     "def plot(freq=1., color='blue', lw=2, grid=True):\n",
